...
                        })
                }, horizontalAlignment = Alignment.CenterHorizontally) {
                    Box(Modifier.padding(top = 12.dp).size(32.dp, 4.dp).clip(RoundedCornerShape(2.dp))
                        .background(MaterialTheme.colorScheme.onSurface.copy(alpha = 0.3f)))
                    Row(Modifier.fillMaxWidth().padding(vertical = 12.dp), verticalAlignment = Alignment.CenterVertically) {
                        Text(title, Modifier.weight(1f), style = MaterialTheme.typography.headlineSmall)
                        ActionIcon(Icons.Rounded.KeyboardArrowDown, "关闭队列", "close_queue", collapse)
                    }
                }
                content(collapse)
            }
        }
    }
...
